--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,12 @@ set -sg terminal-overrides ",*:RGB"
 
 set -g mouse on
 
+# Makes pressing ESC in Neovim happen without delay (https://github.com/neovim/neovim/wiki/FAQ#esc-in-tmux-or-gnu-screen-is-delayed)
+set-option -sg escape-time 10
+
+# Neovim autoread
+set-option -g focus-events on
+
 #unbind C-b
 #set -g prefix C-O
 #bind C-O send-prefix
