--- a/.alacritty.toml
+++ b/.alacritty.toml
@@ -6,7 +6,8 @@ import = [
 TERM = "xterm-256color"
 
 [shell]
-program = "/opt/homebrew/bin/tmux"
+program = "/bin/zsh"
+args = ["-l", "-c", "tmux"]
 
 [window]
 option_as_alt = "Both"
