--- a/.alacritty.toml
+++ b/.alacritty.toml
@@ -3,7 +3,7 @@ import = [
 ]
 
 [env]
-TERM = "xterm-256color"
+term = "xterm-256color"
 
 [shell]
 program = "/bin/zsh"
@@ -20,5 +20,5 @@ normal = { family = "JetBrainsMono Nerd Font", style = "Regular" }
 bold = { family = "JetBrainsMono Nerd Font", style = "Bold" }
 italic = { family = "JetBrainsMono Nerd Font", style = "Italic" }
 bold_italic = { family = "JetBrainsMono Nerd Font", style = "Bold Italic" }
-size = 13
+size = 14
 
