chore(tmux): set tmux catppuccin theme to macchiato

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,15 +9,23 @@ set-option -sg escape-time 10
 # Neovim autoread
 set-option -g focus-events on
 
-#unbind C-b
-#set -g prefix C-O
-#bind C-O send-prefix
+# set vi-mode
+set-window-option -g mode-keys vi
 
 # Vim style pane selection
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# yank keybindings
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
+#unbind C-b
+#set -g prefix C-O
+#bind C-O send-prefix
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
@@ -39,16 +47,8 @@ bind -n S-Right next-window
 bind -n M-H previous-window
 bind -n M-L next-window
 
-# set vi-mode
-set-window-option -g mode-keys vi
-
-# keybindings
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
-
-bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+bind v split-window -v -c "#{pane_current_path}"
+bind s split-window -h -c "#{pane_current_path}"
 
 # Catppuccin theme configuration
 set -g @catppuccin_window_current_text "#( echo \#{pane_current_path} | sed \"s|$HOME|~|\" )"
@@ -58,9 +58,10 @@ set -g @catppuccin_window_right_separator "█ "
 set -g @catppuccin_window_number_position "left"
 set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_status_modules_right "application session"
+set -g @catppuccin_status_modules_right "application session user"
 set -g @catppuccin_status_left_separator "█"
 set -g @catppuccin_status_right_separator "█"
+set -g @catppuccin_flavour 'macchiato'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
