--- a/.alacritty.toml
+++ b/.alacritty.toml
@@ -7,7 +7,7 @@ term = "xterm-256color"
 
 [shell]
 program = "/bin/zsh"
-args = ["-l", "-c", "tmux"]
+args = ["-l", "-c", "tmux attach || tmux"]
 
 [window]
 option_as_alt = "Both"
