--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,6 +23,9 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
+# r to rename session
+bind r command-prompt "rename-window %%"
+
 #unbind C-b
 #set -g prefix C-O
 #bind C-O send-prefix
@@ -51,14 +54,15 @@ bind v split-window -v -c "#{pane_current_path}"
 bind s split-window -h -c "#{pane_current_path}"
 
 # Catppuccin theme configuration
-set -g @catppuccin_window_current_text "#( echo \#{pane_current_path} | sed \"s|$HOME|~|\" )"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_text "#W"
 set -g @catppuccin_window_left_separator "█"
 set -g @catppuccin_window_middle_separator "█ "
 set -g @catppuccin_window_right_separator "█ "
 set -g @catppuccin_window_number_position "left"
 set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_status_modules_right "application session user"
+set -g @catppuccin_status_modules_right "application session"
 set -g @catppuccin_status_left_separator "█"
 set -g @catppuccin_status_right_separator "█"
 set -g @catppuccin_flavour 'macchiato'
