--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,7 @@ set -g default-terminal "$TERM"
 set -ag terminal-overrides ",$TERM:Tc"
 
 set -g mouse on
+set -g status-position top
 
 # Makes pressing ESC in Neovim happen without delay (https://github.com/neovim/neovim/wiki/FAQ#esc-in-tmux-or-gnu-screen-is-delayed)
 set-option -sg escape-time 10
@@ -50,24 +51,27 @@ bind v split-window -v -c "#{pane_current_path}"
 bind s split-window -h -c "#{pane_current_path}"
 
 # Catppuccin theme configuration
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavour 'mocha'
 set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_current_text "#W"
 set -g @catppuccin_window_left_separator "█"
 set -g @catppuccin_window_middle_separator "█ "
 set -g @catppuccin_window_right_separator "█ "
 set -g @catppuccin_window_number_position "left"
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_current_fill "number"
+
+set -g @catppuccin_window_current_color "#98BC74"
+set -g @catppuccin_window_current_background "#333640"
+
+set -g @catppuccin_status_background "#292C33"
 set -g @catppuccin_status_modules_right "application session"
 set -g @catppuccin_status_left_separator "█"
 set -g @catppuccin_status_right_separator "█"
-set -g @catppuccin_flavour 'macchiato'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
